--- a/public/partials/dashboard-listing.ejs
+++ b/public/partials/dashboard-listing.ejs
@@ -1,30 +1,26 @@
 <%
     var hostSummary = [];
     var styles = {
-        'CONERR': ['redIcons', 'fa fa-bolt'],
+        'EXITED': ['redIcons', 'fa fa-bolt'],
         'FATAL': ['redIcons', 'fa fa-exclamation-circle'],
         'STARTING': ['goldIcons', 'fa fa-refresh'],
         'RUNNING': ['greenIcons', 'fa fa-check-circle'],
         'STOPPED': ['blueIcons', 'fa fa-minus-circle'],
-        'BACKOFF': ['blueIcons', 'fa fa-minus-circle']
+        'BACKOFF': ['blueIcons', 'fa fa-minus-circle'],
     }
     if (typeof processes != 'undefined') {
         for (var i = 0; i < processes.length; i++) {
-            if (processes[i].errno) {
-                hostSummary['CONERR'] = 'NA';
-            } else{
-                if (!hostSummary[processes[i].statename]) {
-                    hostSummary[processes[i].statename] = 1;
-                } else {
-                    hostSummary[processes[i].statename]++;
-                }
+            if (!hostSummary[processes[i].statename]) {
+                hostSummary[processes[i].statename] = 1;
+            } else {
+                hostSummary[processes[i].statename]++;
             }
         }
         sortedStatuses = [];
         for (status in hostSummary) {
             sortedStatuses.push([status, hostSummary[status]]);
         }
-        statusOrder = ['CONERR', 'FATAL', 'STARTING', 'RUNNING', 'STOPPED', 'BACKOFF'];
+        statusOrder = ['EXITED', 'FATAL', 'STARTING', 'RUNNING', 'STOPPED', 'BACKOFF'];
         sortedStatuses.sort(function(a, b){
             if (statusOrder.indexOf(a[0]) < statusOrder.indexOf(b[0])) {
                 return -1;
